--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.11.2",
     "craco-alias": "^2.1.1",
     "craco-antd": "^1.19.0",
     "craco-less": "^1.17.1",
@@ -15,17 +16,28 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "set PORT=8000 && craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject",
+    "eject": "react-scripts eject",
     "lint": "eslint src --fix --ext .ts,.tsx",
     "lint-staged": "lint-staged"
   },
@@ -48,13 +60,25 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@craco/craco": "^6.0.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
+    "@types/qs": "^6.9.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-scroll": "^1.8.2",
+    "@types/redux-logger": "^3.0.8",
+    "@types/slate": "^0.47.8",
+    "@types/slate-react": "^0.22.9",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "babel-plugin-import": "^1.13.3",
+    "craco-plugin-style-resources-loader": "0.0.3",
+    "craco-stylus-loader": "^1.0.2",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -68,6 +92,19 @@
     "stylelint-config-standard": "^20.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.3"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
   },
   "lint-staged": {
     "**/*.{ts,tsx,less}": [
