--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "set PORT=8000 && craco start",
+    "start": "set BROWSER=none && set PORT=8000 && craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
