update article detail

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,15 +4,11 @@
     "paths": {
       "@@/*": ["./*"],
       "@/*": ["./*"],
-      // "@typing/*": ["./types/*"],
-      // "@utils/*": ["./utils/*"],
-      // "@pages/*": ["./pages/*"],
-      // "@store/*": ["./store/*"],
-      // "@router/*": ["./router/*"],
-      // "@assets/*": ["./assets/*"],
-      // "@styles/*": ["./styles/*"],
-      // "@services/*": ["./services/*"],
-      // "@components/*": ["./components/*"]
+      // "@pages": ["./pages"],
+      // "@store": ["./store"],
+      // "@assets": ["./assets"],
+      // "@styles": ["./styles"],
+      // "@components": ["./components"]
     }
   }
 }
