--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.11.2",
     "craco-alias": "^2.1.1",
     "craco-antd": "^1.19.0",
-    "craco-less": "^1.17.1",
-    "craco-stylus": "^1.0.0",
+    "dayjs": "^1.10.4",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
@@ -80,16 +80,19 @@
     "@types/slate-react": "^0.22.9",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
-    "craco-plugin-style-resources-loader": "0.0.3",
-    "craco-stylus-loader": "^1.0.2",
+    "craco-stylus-loader": "^1.1.1",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "less": "^2.7.3",
+    "less-loader": "^5.0.0",
     "lint-staged": "^10.5.3",
     "pre-commit": "^1.2.2",
     "prettier": "^2.2.1",
+    "react-app-rewire-stylus-modules": "0.0.2",
     "stylelint": "^13.9.0",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-recommended": "^3.0.0",
