--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,12 +3,12 @@
     "baseUrl": "src",
     "paths": {
       "@@/*": ["./*"],
-      "@/*": ["./*"]
-      // "@pages": ["./pages"],
-      // "@store": ["./store"],
-      // "@assets": ["./assets"],
-      // "@styles": ["./styles"],
-      // "@components": ["./components"]
+      "@/*": ["./*"],
+      "@pages": ["./pages"],
+      "@store": ["./store"],
+      "@assets": ["./assets"],
+      "@styles": ["./styles"],
+      "@components": ["./components"]
     }
   }
 }
